Opened 13 years ago
Closed 12 years ago
#4840 closed bug (fixed)
Collectcatkeys does not work on Haiku
Reported by: | mt | Owned by: | pulkomandy |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Kits/Locale Kit | Version: | R1/alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
On Haiku, /boot/system/bin/collectcatkeys dose not work.
Tested on hrev33753, gcc4/2 hybrid, real hardware.
To reproduce;
cd haiku/trunk/src/preferences/appearance/ gcc -E AntialiasingSettingsView.cpp > AntialiasingSettingsView.cpp.tmp collectcatkeys -pvw -l english -s x-vnd.Haiku-Appearance AntialiasingSettingsView.cpp.tmp
Change History (7)
comment:1 by , 12 years ago
Status: | new → assigned |
---|
comment:2 by , 12 years ago
In hrev35810 gcc4/gcc2 hybrid, This still happens. Collectcatkeys does not end. cpu load is high. I think this is gcc4 system problem because no same report in trac from people building haiku under haiku.
comment:3 by , 12 years ago
FWIW, I run a 4/2 hybrid here and building Haiku (and by extension collectcatkeys) works fine under both compilers for me.
comment:5 by , 12 years ago
I tested "jam -q haiku-cd" in hrev35818 and collectcatkeys works well. But system's collectcatkeys and generated (tools) collectcatkeys seems to not same.
~> ls -l /boot/system/bin/collectcatkeys -rwxr-xr-x 1 baron root 31363 Mar 12 06:31 /boot/system/bin/collectcatkeys ~> ls -l /Data/haiku/trunk/generated/objects/haiku_host/x86/release/tools/locale/collectcatkeys -rwxr-xr-x 1 baron root 77306 Mar 12 06:46 /Data/haiku/trunk/generated/objects/haiku_host/x86/release/tools/locale/collectcatkeys
comment:6 by , 12 years ago
Yes they are different. The system one is built normally while the other one includes most of the locale kit statically so it will work as a buildtool under linux, and under old BeOS. The native one may be broken then... I'll check but that's strange as all the dev was done with this version and running gcc4.
Does this still happen now ? If so, can you give more details on the error ? is it an error message, wrong output, crash ?