Fix a bug in native version of collectcatkeys (not the one used in buildtools) that prevented it from working at all. This fixes #4840

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@37185 a95241bf-73f2-0310-859d-f6bbb57e9c96